Fixed issue with matches that contained null events